頁面登入功能

--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html
   lang="zh"
-  data-theme="<%= cookies.preferredTheme ? cookies.preferredTheme : 'retro' %>"
+  data-theme="retro"
 >
   <head>
     <meta charset="UTF-8" />
